2005-06-25  Jim Meyering  <jim@meyering.net>

	* version-etc.m4 (gl_VERSION_ETC): New file/macro.
	* jm-macros.m4: Require it.

	* root-dev-ino.m4 (gl_ROOT_DEV_INO): New file/macro.
	* jm-macros.m4: Require it.

2005-06-23  Jim Meyering  <jim@meyering.net>

	* xreadlink.m4: Use AC_LIBSOURCES and AC_LIBOBJ.
	* xstrtod.m4: Likewise.

2005-06-19  Jim Meyering  <jim@meyering.net>

	* xgetcwd.m4 (gl_XGETCWD): Add `AC_LIBOBJ([xgetcwd])'.
	Register xgetcwd.c and xgetcwd.h via AC_LIBSOURCES.

	* xfts.m4 (gl_FUNC_XFTS): New file/macro.
	* jm-macros.m4: Require it.

2005-06-13  Jim Meyering  <jim@meyering.net>

	* openat.m4 (gl_FUNC_OPENAT): Add openat-die.c.

2005-06-02  Paul Eggert  <eggert@cs.ucla.edu>

	* extensions.m4: Sync from gnulib; this defines
	_POSIX_PTHREAD_SEMANTICS for the benefit of Solaris.

2005-06-01  Paul Eggert  <eggert@cs.ucla.edu>

	* mkdir-p.m4: Renamed from makepath.m4.
	(gl_MKDIR_PARENTS): Renamed from gl_MAKEPATH.  All uses changed.
	Rename files from makepath.c to mkdir-p.c, and from
	makepath.h to mkdir-p.h.
	* filenamecat.m4: Renamed from path-concat.m4.
	(gl_FILE_NAME_CONCAT): Renamed from gl_PATH_CONCAT.  All uses changed.
	Rename files from path-concat.c to filenamecat.c,
	and from path-concat.h to filenamecat.h.
	* getcwd-path-max.m4: Don't use "path" or "filename" to mean
	"file name" in local variables or comments.
	* rename.m4: Likewise.

2005-05-30  Paul Eggert  <eggert@cs.ucla.edu>

	* jm-macros.m4 (gl_CHECK_ALL_HEADERS): Check for priv.h.

2005-05-27  Paul Eggert  <eggert@cs.ucla.edu>

	* fts.m4 (gl_FUNC_FTS_CORE): Don't check for inttypes.h or stdint.h,
	and don't require gt_INTTYPES_PRI.

	* prereq.m4 (gl_PREREQ): Require gl_STRINTCMP, gl_STRNUMCMP.
	* strnumcmp.m4: New file.

2005-05-20  Paul Eggert  <eggert@cs.ucla.edu>

	* fts.m4 (gl_FUNC_FTS_CORE): Renamed from gl_FUNC_FTS.
	(gl_FUNC_FTS, gl_FUNC_FTS_LGPL): New macros.

2005-05-20  Eric Blake  <ebb9@byu.net>  (tiny change)
