@@ -1,0 +1,14 @@
+#serial 1
+dnl Copyright (C) 2005 Free Software Foundation, Inc.
+dnl This file is free software; the Free Software Foundation
+dnl gives unlimited permission to copy and/or distribute it,
+dnl with or without modifications, as long as this notice is preserved.
+
+AC_DEFUN([gl_DIACRIT],
+[
+  AC_LIBSOURCES([diacrit.c, diacrit.h])
+  AC_LIBOBJ([diacrit])
+
+  dnl Prerequisites.
+  :
+])
